--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/faisaljuliandra/News-website-using-express-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/faisaljuliandra/News-website-using-express-js/issues"
+  },
+  "homepage": "https://github.com/faisaljuliandra/News-website-using-express-js#readme"
 }
